--- a/src/Homee.css
+++ b/src/Homee.css
@@ -1,5 +1,5 @@
 .sectHome{
-    background: url(../src/images/pexels-gerd-altmann-21696.jpg);
+    background: url("./image/pexels-pixabay-261651.jpg");
     background-position: center;
     background-size: cover;
     height: 100vh;
