--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,12 +3,12 @@
     text-decoration: none;
 }
 
-:root {
+/* :root {
     --mainColor: rgb(104, 22, 36);
     --mainColorLight: rgb(216, 151, 162);
     --secondaryColor: rgb(216, 103, 103);
     --textColor: white;
-}
+} */
 
 .navbar{
     width: auto;
@@ -25,7 +25,7 @@
 }
 
 .school-logo:hover{
-    color:var(--secondaryColor) ;
+    color: red ;
 }
 
 .navbar a{
